2002-06-18  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (get_file_header): Only read the first section header if
	e_shoff is non-zero.

2002-06-15  H.J. Lu  (hjl@gnu.org)

	* nm.c (print_size): New variable. Initialize to 0.
	(long_options): Add 'S'/"print-size".
	(main): Handle 'S'.
	(print_symbol_info_bsd): Print size only if print_size is not
	0.

	* doc/binutils.texi: Document -S/--print-size.

2002-6-13  Elias Athanasopoulos  <eathan@otenet.gr>

	* nm.c (struct extended_symbol_info): New strcuture: Add the size
	of the symbols to the information provided by the symbol_info
	structure.
	(print_symbols): Pass the symbol size to print_symbol.
	(print_size_symbols): Pass the symbol size to print_symbol.
	(print_symbol): Extra argument: The size of the symbol.  Store
	this in the extended_symbol_info structure.
	(print_symbol_info): Change type of info parameter to
	extended_symbol_info.  Display the size, if known.
	(print_symbol_info_posix): Likewise.
	(print_symbol_info_sysv): Likewise.

2002-06-08  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regnerate.

	* bucomm.c: Replace CONST with const.
	* nm.c: Likewise.
	* objdump.c: Likewise.

2002-06-07  H.J. Lu <hjl@gnu.org>

	* readelf.c (DW_CFA_GNU_args_size): Don't define.
	(DW_CFA_GNU_negative_offset_extended): Likewise.
	(DW_CFA_GNU_window_save): Likewise.
	(display_debug_frames): Handle DW_CFA_offset_extended_sf,
	DW_CFA_def_cfa_sf and DW_CFA_def_cfa_offset_sf.

2002-06-07  Elias Athanasopoulos  <eathan@otenet.gr>
	
	* nm.c: When computing size of symbols for an ELF target use the
	internal size field.

2002-06-06  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* testsuite/binutils-all/objcopy.exp: clear xfail for
	"hppa*64*-*-hpux*".
	* testsuite/binutils-all/hppa/objdump.exp: Return if
	"*64*-*-*".

2002-06-05  Alan Modra  <amodra@bigpond.net.au>

	* objcopy.c (copy_section): Don't copy SEC_GROUP sections.
