@@ -1,4 +1,6 @@
 -*- text -*-
+Support for the Fujitsu FRV architecture added by Red Hat. Models for FR400 and
+FR500 included.
 
 Changes in version 2.12:
 
